--- a/public/back/login.html
+++ b/public/back/login.html
@@ -22,7 +22,7 @@
                 <div class="panel-body">
                     <form class="form-horizontal">
                         <div class="form-group">
-                            <label for="username" class="col-sm-3 control-label">用户名:</label>
+                            <label for="username" autocomplete="off" class="col-sm-3 control-label">用户名:</label>
                             <div class="col-sm-9">
                                 <input type="email" name="username" class="form-control" id="username" placeholder="请输入你的用户名">
                             </div>
