--- a/public/back/login.html
+++ b/public/back/login.html
@@ -22,9 +22,9 @@
                 <div class="panel-body">
                     <form class="form-horizontal">
                         <div class="form-group">
-                            <label for="username" autocomplete="off" class="col-sm-3 control-label">用户名:</label>
+                            <label for="username"  class="col-sm-3 control-label">用户名:</label>
                             <div class="col-sm-9">
-                                <input type="email" name="username" class="form-control" id="username" placeholder="请输入你的用户名">
+                                <input type="email" autocomplete="off" name="username" class="form-control" id="username" placeholder="请输入你的用户名">
                             </div>
                         </div>
                         <div class="form-group">
