增加了乐淘系统管理的登录页的校验功能

--- a/public/back/login.html
+++ b/public/back/login.html
@@ -8,6 +8,8 @@
     <title>乐淘管理系统-登录</title>
     <!-- 引入bootstrap的css文件 -->
     <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css">
+    <!-- 引入 bootstrap-validator 的css文件 -->
+    <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.css">
     <!-- 引入自己的css文件 -->
     <link rel="stylesheet" href="./css/common.css">
 </head>
@@ -50,6 +52,8 @@
     <script src="./lib/jquery/jquery-1.12.4.js"></script>
     <!-- 引入bootstrap的js文件 -->
     <script src="./lib/bootstrap/js/bootstrap.js"></script>
+    <!-- 引入 bootstrap-validator 的js文件 -->
+    <script src="./lib/bootstrap-validator/js/bootstrapValidator.js"></script>
     <!-- 引入自己的js文件 -->
     <script src="./js/common.js"></script>
     <script src="./js/login.js"></script>
