修正了登录页面按钮重置和登录的样式问题

--- a/public/back/login.html
+++ b/public/back/login.html
@@ -37,8 +37,8 @@
                         </div>
                         <div class="form-group">
                             <div class="col-sm-offset-3 col-sm-6">
-                                <button type="submit" class="btn btn-default">重置</button>
-                                <button type="submit" class="btn btn-primary fr">确认</button>
+                                <button type="reset" class="btn btn-default pull-left">重置</button>
+                                <button type="submit" class="btn btn-primary pull-right">确认</button>
                             </div>
                         </div>
                     </form>
