进度条完成

--- a/public/back/login.html
+++ b/public/back/login.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css">
     <!-- 引入 bootstrap-validator 的css文件 -->
     <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.css">
+    <!-- 引入进度条css文件 -->
+    <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
     <!-- 引入自己的css文件 -->
     <link rel="stylesheet" href="./css/common.css">
 </head>
@@ -54,6 +56,8 @@
     <script src="./lib/bootstrap/js/bootstrap.js"></script>
     <!-- 引入 bootstrap-validator 的js文件 -->
     <script src="./lib/bootstrap-validator/js/bootstrapValidator.js"></script>
+    <!-- 引入 nprogress 的js文件 -->
+    <script src="./lib/nprogress/nprogress.js"></script>
     <!-- 引入自己的js文件 -->
     <script src="./js/common.js"></script>
     <script src="./js/login.js"></script>
