--- a/public/back/index.html
+++ b/public/back/index.html
@@ -90,7 +90,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                    <button type="button" class="btn btn-primary">确定</button>
+                    <button type="button" class="btn btn-primary btn_confirm">确定</button>
                 </div>
             </div>
             <!-- /.modal-content -->
