首页全部完成

--- a/public/back/index.html
+++ b/public/back/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
     <!-- 引入自己的css文件 -->
     <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
@@ -73,6 +74,12 @@
                 <li><a href="#">管理系统</a></li>
                 <li><a href="#">首页</a></li>
             </ol>
+
+            <!-- 主内容区 -->
+            <div class="yc_content">
+                <div class="pic_left pull-left"></div>
+                <div class="pic_right pull-right">22</div>
+            </div>
         </div>
     </div>
 
@@ -82,7 +89,7 @@
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" ><span>&times;</span></button>
+                    <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
                     <h4 class="modal-title">温馨提示</h4>
                 </div>
                 <div class="modal-body">
@@ -102,12 +109,14 @@
 
     <!-- 引入jQuery文件 -->
     <script src="./lib/jquery/jquery-1.12.4.js"></script>
-    <!-- 引入bootstrap的js文件 -->
+    <!-- 引入框架 bootstrap的js文件 -->
     <script src="./lib/bootstrap/js/bootstrap.js"></script>
-    <!-- 引入 bootstrap-validator 的js文件 -->
+    <!-- 引入 登录检验插件 bootstrap-validator 的js文件 -->
     <script src="./lib/bootstrap-validator/js/bootstrapValidator.js"></script>
-    <!-- 引入 nprogress 的js文件 -->
+    <!-- 引入 进度条插件  nprogress 的js文件 -->
     <script src="./lib/nprogress/nprogress.js"></script>
+    <!-- 引入 数据图 插件 -->
+    <script src="./lib/echarts/echarts.min.js"></script>
     <!-- 引入自己的js文件 -->
     <script src="./js/common.js"></script>
     <script src="./js/index.js"></script>
