--- a/public/back/user.html
+++ b/public/back/user.html
@@ -94,14 +94,15 @@
                 </table>
                 <!-- 分页 -->
                 <div class="text-right pull-right">
-                        <ul id="paginator"></ul>
-                    </div>
+                    <ul id="paginator"></ul>
+                </div>
             </div>
         </div>
     </div>
 
 
     <!-- 模态框 -->
+    <!-- 退出弹出时弹出 -->
     <div class="modal fade" tabindex="-1" id="logoutModal">
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
@@ -123,6 +124,28 @@
     </div>
     <!-- /.modal -->
 
+    <!-- 禁用启用时弹出 -->
+    <div class="modal fade" tabindex="-1" id="userModal">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+                    <h4 class="modal-title">温馨提示</h4>
+                </div>
+                <div class="modal-body">
+                    <p class="text-danger"><i class="glyphicon glyphicon-info-sign"></i>您确定要执行此操作吗？</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                    <button type="button" class="btn btn-primary btn_edit">确定</button>
+                </div>
+            </div>
+            <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+    </div>
+
+
     <script type='text/html' id="tableTem">
         {{each rows v i}}
         <tr>
@@ -130,12 +153,12 @@
             <td>{{v.username}}</td>
             <td>{{v.mobile}}</td>
             <td>{{v.isDelete? '正常':'禁用'}}</td>
-            <td>
+            <td data-id='{{v.id}}'>
                 <% if(v.isDelete ===1 ){ %>
-                <button class="btn btn-danger btn-sm">禁用</button>
-                <% }else{ %>
-                <button class="btn btn-success btn-sm">启用</button>
-                <% } %>
+                    <button class="btn btn-danger btn-sm">禁用</button>
+                    <% }else{ %>
+                        <button class="btn btn-success btn-sm">启用</button>
+                        <% } %>
             </td>
         </tr>
         {{/each}}
